data/derived/comb/progs/unify/prog6881.ml.out
Characters 16-18:
  let _ = explode [];;
                  ^^
Error: This expression has type 'a list
       but an expression was expected of type string
